# mx

./: AeroView.cxx  AeroView.h  MXphnxLinkDef.h  Makefile.am  README.md  disMPC.cc  display.cc  dojob.csh  mMPCEXCounter.cxx  mMPCEXQ.cxx  mMPCEXQ.h  mMPCTunner.cxx  mSubsysReco.cxx  mSubsysReco.h  makefile  mxCalibBasePbWO4.cxx  mxCalibBaseSiW.cxx  mxCalibBaseSiW.h  mxCalibDAu16.cxx  mxCalibMaster.cxx  mxCalibMaster.h  mxCoalition.cxx  mxCoalition.cxx~  mxCoalition.h  mxCoalition.h~  mxCoalitionCuts.cxx  mxCoalitionCuts.h  mxDB.cc  mxDB.exl2h.cc  mxDB.exlan.cc  mxDB.exped.cc  mxDB.mpctau.cc  mxEventCuts.cxx  mxEventCuts.h  mxGeometry.cxx  mxGeometry.h  mxMCParticle.cxx  mxMCParticle.h  mxParty.cxx  mxParty.h  (+17 more)
ForwardPhotons_MPCEX16/: ForwardPhotonsLinkDef.h  Makefile.am  mMPCEXCounter.h  mMPCEXQ.cxx  mMPCEXQ.h  mMPCTunner.h  mPhotonFinder.cxx  mPhotonFinder.h  mSubsysReco.cxx  mSubsysReco.h  mTest.cxx  mTest.h
LocalAnalysis/: display.cc  recoMPC.cc  reconstruct.cc
MPCEXsim/: CMakeLists.txt~  GNUmakefile  MPCEXsim.cc  run2.mac  run2.mac~  startup.mac
MPCEXsim/B2a/: run2.mac
MPCEXsim/B2a/include/: Analysis.hh  B2EventAction.hh  B2EventAction.hh~  B2RunAction.hh  B2RunAction.hh~  B2aDetectorConstruction.hh  B2aDetectorConstruction.hh~  B2aDetectorMessenger.hh  B2aDetectorMessenger.hh~  Run.hh  Run.hh~
MPCEXsim/B2a/src/: #B2EventAction.cc#  #B2TrackerHit.cc#  B2EventAction.cc  B2EventAction.cc~  B2PrimaryGeneratorAction.cc  B2PrimaryGeneratorAction.cc~  B2RunAction.cc  B2RunAction.cc~  B2aDetectorConstruction.cc  B2aDetectorConstruction.cc~  B2aDetectorMessenger.cc  B2aDetectorMessenger.cc~  Run.cc  Run.cc~
MPCEXsim/include/: #ActionInitialization.hh#  ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  Run.hh
MPCEXsim/macros/: MpcExAeroView.h  simqa.C
MPCEXsim/src/: DetectorConstruction.cc  EventAction.cc  EventAction.cc~  PrimaryGeneratorAction.cc  RunAction.cc
MpcExMacros/: taxis.txt
MpcExMacros/mxMIP/: runs.dat.final
MpcExMacros/mxMIP/ADCperMinipad/: adcextract.C  adcinvestigate.C  comparepedestalshigh.C  display.C  fit.C  fitresultpkt.C  fitresultsensor.C  makepedhightable.C  maketables.C  ped.C  peddisplay.C  peddisplaysen.C  pedfit.C  showLayer.C
MpcExMacros/mxMIP/ENERGYperSensor/: adcextract.C  adcextractsensor.C  display.C  displaysen.C  energyfit.C  fitresultsen.C  showLayer.C  timesen.C
MpcExMacros/qcCAL/: events.C  plotpsi.C  psi.C  psiallcc.C  qnorm.C  qxqy.C  resolution.C
MpceX16/: CARphnxLinkDef.h  CNTDE.cxx  CNTE.cxx  EMCC.cxx  EMCC.h  Makefile.am  PHQCData.h  QCBphnxLinkDef.h  QCRphnxLinkDef.h  configure.in  mCArecoPizeroes.cxx  mCArecoPizeroes.h  mMXRinit.cxx  mMXRinit.h  mQCRinit.cxx  mQCRinit.h  mxCalibBasePbWO4.cxx  mxCalibBasePbWO4.h  mxCalibMaster.cxx  mxCalibMaster.h  mxCalibStageSiW.cxx  mxCalibStageSiW.h  mxCandidate.h  mxCluster.h  mxClusterer.h  mxClustererEX.cxx  mxClustererEX.h  mxClustererMPC.cxx  mxDB.cc  mxDB.exl2h.cc  mxDB.exlan.cc  mxDB.exlanx.cc  mxDB.expar.cc  mxDB.exped.cc  mxDB.exrun.cc  mxData.h  mxGeometry.cxx  mxGeometry.h  mxHit.cxx  qcCalibBase.cxx  (+9 more)
MpceXCalib/: Makefile.am  configure.in  mxCalibBaseSiW.cxx  mxCalibBaseSiW.h  mxCalibMaster.cxx  mxCalibMaster.h  mxDB.mpctau.cc  mxSafetyCuts.h
MpceXReco/: MXRphnxLinkDef.h  Makefile.am  Makefile.in  PHMXData.h  configure  configure.in  mMXRinit.cxx  mMXRinit.h  makefile  mxCandidate.cxx  mxCandidateCuts.cxx  mxCandidateCuts.h  mxCluster.cxx  mxCluster.h  mxClusterer.cxx  mxClustererMPC.h  mxDB.cc  mxDB.exlan.cc  mxData.cxx  mxDecayCandidate.cxx  mxDecayCandidate.h  mxDisplay.cxx  mxDisplay.h  mxGeometry.cxx  mxGeometry.h  mxHit.h  mxReconstruction.cxx  mxReconstruction.h
MpceXReco/autom4te.cache/: output.0  output.1  traces.0  traces.1
MpceXSimu/: CMakeLists.txt  mxg4ActionInitialization.h  mxg4DetectorConstruction.cxx  mxg4DetectorConstruction.h  mxg4PrimaryGeneratorAction.h  mxg4Run.h  mxg4TrackerSD.h  run1.mac
MpceXSimu/read/: makefile  mergeSN.cc
Run16_Deadhot/: mMpcExDeadHot.h
Run16_Deadhot/macro/: Fun4All_MpcExDataAna.C  good_good_Run_List.txt  make_bad_ped.sh  make_bad_rad_ped.sh  readitg.C  readitg_r.C  readme.txt  sum_all_root.sh  sum_root_hadd.sh
calibration/: loadbkeys.C  mxCalibBase.cxx  mxCalibBase.h  mxCalibDAu16.cxx  mxCalibDAu16.h  mxCalibMaster.cxx  mxCalibMaster.h  mxChipStatus.cxx  mxChipStatus.h
calibration/deadhot/: Integrals.C  makebadsignal.C  plotD.C  plotRfix.C
calibration/macros/: makebadsigmaped.C  makepedtxt.C
calibration/mip/: find_MIP_peaks.C
calibration/pedestal/: makebadsigmaped.C
data/: MXphnxLinkDef.h  Makefile.am  makefile  mxGeometry.cxx  mxReconstruction.h  mxSubsysReco.cxx  mxSubsysReco.h  mxUnion.h  srTest.cxx  srTest.h
data/macros/: 0000454000_0000455000  RunMyMacro.C  RunTest.C  Run_MXRECO.C  dorun.csh  submitter.job
fastsim/: gen_geantgeo.C  readoutput.C
pr/: display.cc  mxCoalition.cxx  mxCoalition.h  mxGeometry.cxx  mxGeometry.h  mxHit.cxx  mxHit.h  mxParty.cxx  mxParty.h  mxQAReconstruction.cxx  mxQAReconstruction.h  mxReconstruction.cxx  mxReconstruction.h  mxUnion.cxx  phMath.h
sim/: CMakeLists.txt  MPCEXsim.cc  MPCEXsim.in  init_vis.mac  makefile  mxg4ActionInitialization.cxx  mxg4Analysis.h  mxg4DetectorConstruction.cxx  mxg4DetectorConstruction.h  mxg4DetectorMessenger.cxx  mxg4DetectorMessenger.h  mxg4EventAction.cxx  mxg4EventAction.h  mxg4PrimaryGeneratorAction.cxx  mxg4Run.cxx  mxg4RunAction.cxx  mxg4RunAction.h  mxg4TrackerHit.cxx  mxg4TrackerHit.h  mxg4TrackerSD.cxx  oneToNorth.mac  oneToSouth.mac  run2.mac
sim/include/: DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackerSD.hh
sim/read/: readsim  readsim.cc
sim/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc
